4.3
===
- JasperReports plugin changed from codehaus to to alexnederlof
  (https://github.com/alexnederlof/Jasper-report-maven-plugin).

  Replace your JasperReports compilation section in core/pom.xml by the following one :
      <plugin>
        <groupId>com.alexnederlof</groupId>
        <artifactId>jasperreports-plugin</artifactId>
        <executions>
          <execution>
            <phase>generate-resources</phase>
            <goals>
              <goal>jasper</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <outputDirectory>${project.build.directory}/generated-resources/jasperreports</outputDirectory>
        </configuration>
      </plugin>

- Flex has been upgraded to the latest 4.14.1 version

- We have moved to Apache BlazeDS implementation, so replace all blazeds dependencies sections in your webapp modules
  by the following one :
      <dependency>
        <groupId>org.apache.flex.blazeds</groupId>
        <artifactId>flex-messaging-remoting</artifactId>
      </dependency>
      <dependency>
        <groupId>org.apache.flex.blazeds</groupId>
        <artifactId>flex-messaging-proxy</artifactId>
      </dependency>

- Flex davisualization dependency management has been removed. Most of the time, you should be able to safely delete
  them. However, whenever necessary, use the following dependencies in your projects Flex modules :
      <dependency>
        <groupId>org.apache.flex.framework</groupId>
        <artifactId>advancedgrids</artifactId>
        <type>swc</type>
      </dependency>
      <dependency>
        <groupId>org.apache.flex.framework</groupId>
        <artifactId>charts</artifactId>
        <type>swc</type>
      </dependency>

- Migrated to jfreechart 1.0.19. The artifact groupId changed so replace :
      <dependency>
        <groupId>jfree</groupId>
        <artifactId>jfreechart</artifactId>
      </dependency>
  by
      <dependency>
        <groupId>org.jfree</groupId>